--- a/templates/activities.html
+++ b/templates/activities.html
@@ -4,6 +4,13 @@
 	<title>Activities</title>
 {% endblock %}
 
+{% block body %}
+<!-- <body> -->
+<body id = "navigation2">
+{% endblock %}
+
+
+
 {% block head %}
 	<h1>Colorado</h1>
 	<h2>Activities</h2>
@@ -38,7 +45,10 @@
 
 
 {% block foot %}
-		
+<!-- http://www.beavercreek.com
+http://www.winterparkresort.com
+http://www.breckenridge.com
+https://bouldercolorado.gov/osmp/mount-sanitas-trailhead
 https://bouldercolorado.gov/osmp/chautauqua-trailhead
-
+ -->
 {% endblock %}
