--- a/templates/cities.html
+++ b/templates/cities.html
@@ -4,6 +4,13 @@
 	<title>Cities to Visit</title>
 {% endblock %}
 
+
+{% block body %}
+<!-- <body> -->
+<body id = "navigation3">
+{% endblock %}
+
+
 {% block head %}
 	<h1>Colorado</h1>
 	<h2>Cities</h2>
