--- a/templates/base.html
+++ b/templates/base.html
@@ -20,9 +20,11 @@
 
 	
 </head>
-<body>
+{% block body %}
+<!-- <body> -->
+{% endblock %}
 	<header>
-		<img id = "flag" src="static/Flag.png" alt="Colorado Flag">
+<!-- 		<img id = "flag" src="static/Flag.png" alt="Colorado Flag"> -->
 		<!-- This also changes from page to page. Createsthe title for each page -->
 		{% block head %}
 		I should never see this content.  It should be replaced.
@@ -41,11 +43,11 @@
       </button>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        	<li><a href = "index.html">Home</a></li>
-    		<li><a href = "activities.html">Activities</a></li>
-    		<li><a href = "cities.html">Cities</a></li>
-    		<li><a href = "parks.html">National Parks</a></li>
+      <ul class="nav nav-pills nav-justified">
+        	<li class = "navigation-1"><a href = "index.html">Home</a></li>
+    		<li class = "navigation-2"><a href = "activities.html">Activities</a></li>
+    		<li class = "navigation-3"><a href = "cities.html">Cities</a></li>
+    		<li class = "navigation-4"><a href = "parks.html">National Parks</a></li>
       </ul>
     </div>
   </div>
@@ -54,46 +56,14 @@
 
 
 
-<!-- <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
-        </li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-        <li><a href="#">Page 2</a></li>
-      </ul>
-    </div>
-  </div>
-</nav> -->
-
-
-
-
-
-
-
-
-
-
-
-<!-- 			<ul class="nav nav-pills nav-justified">
-    			<li class="active"><a href = "index.html">Home</a></li>
-    			<li><a href = "activities.html">Activities</a></li>
-    			<li><a href = "cities.html">Cities</a></li>
-    			<li><a href = "parks.html">National Parks</a></li>
-  			</ul> -->
-
+<!-- 
+		<ul class="nav nav-pills nav-justified">
+    		<li class="active"><a href = "index.html">Home</a></li>
+   			<li><a href = "activities.html">Activities</a></li>
+   			<li><a href = "cities.html">Cities</a></li>
+   			<li><a href = "parks.html">National Parks</a></li>
+ 		</ul>
+ -->
 
 	</header>
 
