--- a/templates/index.html
+++ b/templates/index.html
@@ -4,40 +4,78 @@
 	<title>Home</title>
 {% endblock %}
 
+{% block body %}
+<!-- <body> -->
+<body id = "navigation1">
+{% endblock %}
+
+
 {% block head %}
 	<h1>Colorado</h1>
 	<h2>Home</h2>
 {% endblock %}
 
 {% block content %}	
+	
+
 	<!-- adds text to the home page. -->
-	<h3>Facts</h3>
-	<p>Colorado enterend the Union on August 1, 1876</p>
-	<p>Colorado is nicknamed The centennial State becasue 100 years after the signing of our nations declaration of independence we became a state.</p>
-	<p>The capital of Colorado is Denver, located in the upper right hand corner of the map.</p>
-	<img src="static/Denver.gif" alt="Capital">
-	<p>Mount Elbert is the highest point in Colorado, coming in at 14,433 feet.</p>
-	<img src="static/MountElbert.JPG" alt="Mount Elbert">
-	<p>The lowest point is the Arkansas at 3,315 feet above sea level.</p>
-	<img src="static/arkansasriver.jpg" alt="Arkansas River">
+<div class="container text-center"> 
+  <div class="row">
+		<h3>Facts</h3>
+		<p>Colorado enterend the Union on August 1, 1876</p>
+		<p>Colorado is nicknamed The centennial State becasue 100 years after the signing of our nations declaration of independence we became a state.</p>
+	<div class="col-sm-12 col-md-6 col-lg-4">
+		<img src="static/Denver.gif" alt="Capital" class="center-block" class="img-responsive" >
+		<p>The capital of Colorado is Denver, located in the upper right hand corner of the map.</p>
+	</div>
+	<div class="col-sm-12 col-md-6 col-lg-4">
+		<img src="static/MountElbert.JPG" alt="Mount Elbert" class="center-block" class="img-responsive">
+		<p>Mount Elbert is the highest point in Colorado, coming in at 14,433 feet.</p>
+	</div>	
+	<div class="col-sm-12 col-lg-4">
+		<img src="static/arkansasriver.jpg" alt="Arkansas River"  class="center-block" class="img-responsive">
+		<p>The lowest point is the Arkansas River at 3,315 feet above sea level.</p>
+    </div>
+  </div>
+</div>
+
+<div class="container text-center"> 
+  <div class="row">
 	<h3>State...</h3>
 		<p class="facts">Motto: Nil sine and Numine (nothing without Providence)</p>
-		<p class="facts">Flower: Rocky Mountain Columbine
-		<img src="static/RMColumbine.jpg" alt="Rocky Mountain Columbine"> </p>
-		<p class="facts">Animal: Rocky Mountain Bighorn Sheep
-		<img src="static/RMbighornsheep.jpg" alt="Rocky Mountain Bighorn Sheep"> </p>
-		<p class="facts">Fish: Greenback Cutthroat Trout
-		<img src="static/CutthroatTrout.jpg" alt="Greenback Cutthroat Trout"> </p>
-		<p class="facts">Insect: Colorado Hairstreak Butterfly
-		<img src="static/ColoradoHairstreakButterfly.jpg" alt="Colorado Hairstreak Butterfly"> </p>
-		<p class="facts">Bird: Lark Bunting
-		<img src="static/LarkBunting.jpg" alt="Lark Bunting"> </p>
-		<p class="facts">Tree: Colorado blue Spruce
-		<img src="static/blueSpruce.jpg" alt="Blue Spruce"> </p>
-		<p class="facts">Gem: Aquamarine
-		<img src="static/Aquamarine.jpg" alt="Aquamarine"></p>
-		<p class="facts">Song: Where the Columbines Grow
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/LLWD2WIvRQk" frameborder="0" allowfullscreen></iframe>  </p>
+	<div class="col-sm-12 col-md-6 col-lg-4">
+		<img src="static/RMColumbine.jpg" alt="Rocky Mountain Columbine" class="center-block" class="img-responsive">
+		<p class="facts">Flower: Rocky Mountain Columbine</p>
+	</div>
+	<div class="col-sm-12 col-md-6 col-lg-4">
+		<img src="static/RMbighornsheep.jpg" alt="Rocky Mountain Bighorn Sheep" class="center-block" class="img-responsive"> 
+		<p class="facts">Animal: Rocky Mountain Bighorn Sheep</p>
+	</div>	
+	<div class="col-sm-12 col-md-6 col-lg-4">
+		<img src="static/CutthroatTrout.jpg" alt="Greenback Cutthroat Trout" class="center-block" class="img-responsive"> 
+		<p class="facts">Fish: Greenback Cutthroat Trout</p>
+	</div>
+	<div class="col-sm-12 col-md-6 col-lg-4">	
+		<img src="static/ColoradoHairstreakButterfly.jpg" alt="Colorado Hairstreak Butterfly" class="center-block" class="img-responsive"> 
+		<p class="facts">Insect: Colorado Hairstreak Butterfly</p>
+	</div>
+	<div class="col-sm-12 col-md-6 col-lg-4">	
+		<img src="static/LarkBunting.jpg" alt="Lark Bunting" class="center-block" class="img-responsive"> 
+		<p class="facts">Bird: Lark Bunting</p>
+	</div>	
+	<div class="col-sm-12 col-md-6 col-lg-4">
+		<img src="static/blueSpruce.jpg" alt="Blue Spruce" class="center-block" class="img-responsive"> 
+		<p class="facts">Tree: Colorado blue Spruce</p>
+	</div>
+	<div class="col-sm-12 col-md-6 col-lg-4">
+		<img src="static/Aquamarine.jpg" alt="Aquamarine" class="center-block" class="img-responsive">
+		<p class="facts">Gem: Aquamarine</p>
+	</div>
+		<iframe width=60% src="https://www.youtube.com/embed/LLWD2WIvRQk" frameborder="0" allowfullscreen></iframe>  
+		<p class="facts">Song: Rocky Mountain High</p>
+ 
+  </div>
+</div>
 
 	<!-- State facts w/ pics 
 		dance: square dance
