--- a/templates/parks.html
+++ b/templates/parks.html
@@ -4,6 +4,13 @@
 	<title>National Parks</title>
 {% endblock %}
 
+{% block body %}
+<!-- <body> -->
+<body id = "navigation4">
+{% endblock %}
+
+
+
 {% block head %}
 	<h1>Colorado</h1>
 	<h2>National Parks</h2>
