--- a/static/style.css
+++ b/static/style.css
@@ -3,24 +3,29 @@ body {
 	font-family: cursive;
 	font-size: 20px;
 }
-
-
-
-@media only screen and (min-width: 400px){
-	#flag{
-		width: 20%;
-		float: right;
-		padding-left: 2%;
+header{
+	background-image: url("Flag.png");
+	background-size: contain;
+}
+h1{
+	font-weight: bold;
+	font-size: 45px;
+}
+h2{
+	font-weight: bold;
+}
+h3{
+	font-weight: bold;
+}
+#navigation1 .navigation-1, #navigation2 .navigation-2, #navigation3 .navigation-3, #navigation4 .navigation-4{
+	background-color: #000080;
+	color: #FFFF00;
+	margin-top: 40px;
 	}
 	.facts{
 		border: black 3px dash;
 	}
-	body{
-		background-color: lightblue;
-	}
-	body img{
-		width: 50%;
-	}
+
 	footer a{
 		display: block;
 		text-align: center;
@@ -29,6 +34,20 @@ body {
 		border-radius: 30px;
 		background-color: orange;
 	}
+@media only screen and (min-width: 400px){
+/*	#flag{
+		width: 20%;
+		float: right;
+		padding-left: 2%;
+	}*/
+
+	body{
+		background-color: lightblue;
+	}
+	body img{
+		width: 50%;
+	}
+	
 
 }
 
@@ -40,9 +59,7 @@ body {
 		float: right;
 		padding-left: 6%;
 	}
-	#navigation1 .navigation-1, #navigation2 .navigation-2, #navigation3 .navigation-3, #navigation4 .navigation-4{
-		background-color: #FF8000;
-	}
+
 
 
 }
