--- a/templates/base.html
+++ b/templates/base.html
@@ -44,10 +44,10 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav nav-pills nav-justified">
-        	<li class = "navigation-1"><a href = "index.html">Home</a></li>
-    		<li class = "navigation-2"><a href = "activities.html">Activities</a></li>
-    		<li class = "navigation-3"><a href = "cities.html">Cities</a></li>
-    		<li class = "navigation-4"><a href = "parks.html">National Parks</a></li>
+        	<li class = "navigation-1 color-me"><a href = "index.html">Home</a></li>
+    		<li class = "navigation-2 color-me"><a href = "activities.html">Activities</a></li>
+    		<li class = "navigation-3 color-me"><a href = "cities.html">Cities</a></li>
+    		<li class = "navigation-4 color-me"><a href = "parks.html">National Parks</a></li>
       </ul>
     </div>
   </div>
