Adding container and divs
finished up the adding containers and divs for the layout.

--- a/templates/cities.html
+++ b/templates/cities.html
@@ -17,22 +17,29 @@
 {% endblock %}
 
 {% block content %}
+<div class="container text-center"> 
+  <div class="row">
 	<h3>Boulder</h3>
+	<div class="col-sm-12 col-md-6">
 		<p>There are so many places to explore in Boulder. First there is Pearl Street Mall. Began as a supply town for gold miners in the mountains.It was established on February 10, 1859, as part of the hunting grounds for Arapahos. On August 6, 1977 Pearl Street became what it is today. No cars are allowed on a section allowing for walkers, and entertainers to find places to spend time.</p>
 		<img src="static/PearlStreet.jpg" alt="Pearl Street">
 		<img src="static/PearlPerformance.jpg" alt="Performacne on Pearl Street">
-	
+	</div>
 		<p>The Colorado Shakespeare Festival is a theater company associated wiht the University of Colorado Boulder. They have been performing since 1958, however there there was a span of 19 years starting in 1901 that there were perofrmances . The shows happen outside in the Mary Rippon Outdoor Theatre and in the newly renovated indoor University Theatre.</p>
-
+	<div class="col-sm-12 col-md-6 ">
 		<p>The Boulder County Farmers Market is a non profit organization running producer-only market. It was created by a group of local farmers in the mid-1980s. It has grown from a few tables of produce to more than 150 local venders, as well as to other locations and cities close by. </p>
 		<img src="static/farmersmarket.jpg" alt="Boulder County Farmers Market">
-
+	</div>
+	<div class="col-sm-12 col-md-6">
 		<p>If you like tea, have ever wondered how tea was made, or are just looking to waste some time Celestial Seasonings Tea Factory is the perfect place to do all of these things. You can take a 45 minute free tour of the factory and learn about the world of tea and how Celestial Seasonings products are blended, packaged, and shipped.</p>
 		<img src="static/celestial.jpg" alt="Celestial Seasonings Factory Tour">
 		<img src="static/somuchtea.jpg" alt="Tea in Boxes">
+	</div>
+	<div class="col-sm-12 col-md-6">
 		<p>The Leanin' Tree Museum of Western Art is rated Boulder's top museums and is one of the nation's largest private collections of western art. It is a free museum open every day of the week. You can even see how they make their very own greeting cards or take a walk through the outdoor garden and view life-size and monumental sculptures.. </p>
 		<img src="static/leanin_tree_museum.jpg" alt="Leanin Tree Museum">
 		<img src="static/LTM-horse.jpg" alt="Horse in Leanin Tree Museum">
+	</div>
 
 
 	<h3>Denver</h3>
