--- a/templates/parks.html
+++ b/templates/parks.html
@@ -17,12 +17,123 @@
 {% endblock %}
 
 {% block content %}
+
+
+
+
+
 	<h3>Rocky Mountain National Park</h3>
 		<p>While visiting Rocky Mountain National Park there are so many different activities to participate in. YOu can go on sceneic drives, hike, watch wildlife, picnic, camp, horseback ride, and so much more. There are a variety of ventures for people of all ages to partake in. Visiting Lily Lake, Bear lake, and Kawuneeche Valley are a few more places to visit in the park. Estes Park, where Rocky mountain National Park is located, offers an Ariel Tramway as a way to gain a great view without having to hike! </p>
 		<!-- photo gallery -->
+
+
+<div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="static/RMNP1.jpg" alt="RMNO" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="static/RMNP2.jpg" alt="Chania" width="460" height="345">
+      </div>
+    
+      <div class="item">
+        <img src="static/RMNP3.jpg" alt="Flower" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="static/RMNP4.jpg" alt="Flower" width="460" height="345">
+      </div>
+      <div class="item">
+        <img src="static/RMNP5.jpg" alt="Flower" width="460" height="345">
+      </div>
+    </div>
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+
 	<h3>Great Sand Dunes National Park and Preserve</h3>
 		<p>The Great Sand Dunes have been forming for a very long time and it is a result of unique wind patterns of the San Luis Vally. The dunes span 30 square miles and some estimate it to hold mroe than 5 billion cubic meters of sand. They are the tallest dunes in north america, with the tallest dune standing at 750 feet from the base to the top. Visiters can hike a variety of trails through the national park, as well as sandboard or sand sled down some of the dunes.</p>
 		<!-- photo gallery -->
+
+
+
+
+<div class="container">
+  <br>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
+    </ol>
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+      <div class="item active">
+        <img src="static/GSDNP1.jpg" alt="Sand Boarding" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="static/GSDNP2.jpg" alt="Chania" width="460" height="345">
+      </div>
+    
+      <div class="item">
+        <img src="static/GSDNP3.jpg" alt="Flower" width="460" height="345">
+      </div>
+
+      <div class="item">
+        <img src="static/GSDNP4.jpg" alt="Flower" width="460" height="345">
+      </div>
+      <div class="item">
+        <img src="static/GSDNP5.jpg" alt="Flower" width="460" height="345">
+      </div>
+    </div>
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!-- 		<p>Hiking and backpacking, snadboarding and sand sledding, Splashing in Medano Creek, Zapata Falls, </p> -->
 <!-- 	<h3>Mesa Verde National Park</h3>
 		<p>Mesa Verde Visitor and research center, chapin mesa archeological Museum, cliff dweling,  Spruce Tree House -or- drive the Mesa Top Loop Road, Drive the Cliff Palace/Balcony House Loop Road, </p> -->
