--- a/static/style.css
+++ b/static/style.css
@@ -51,6 +51,13 @@ h3{
 /*	body img{
 		width: 50%;
 	}*/
+
+  .carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+  }
+
 	
 
 }
