--- a/templates/parks.html
+++ b/templates/parks.html
@@ -18,15 +18,14 @@
 
 {% block content %}
 
-
-
-
+<div class="container text-center"> 
+  <div class="row">
 
 	<h3>Rocky Mountain National Park</h3>
 		<p>While visiting Rocky Mountain National Park there are so many different activities to participate in. YOu can go on sceneic drives, hike, watch wildlife, picnic, camp, horseback ride, and so much more. There are a variety of ventures for people of all ages to partake in. Visiting Lily Lake, Bear lake, and Kawuneeche Valley are a few more places to visit in the park. Estes Park, where Rocky mountain National Park is located, offers an Ariel Tramway as a way to gain a great view without having to hike! </p>
 		<!-- photo gallery -->
 
-
+<div class="col-sm-12">
 <div class="container">
   <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -40,22 +39,22 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="static/RMNP1.jpg" alt="RMNO" width="460" height="345">
+        <img src="static/RMNP1.jpg" alt="RMNP" width="60%">
       </div>
 
       <div class="item">
-        <img src="static/RMNP2.jpg" alt="Chania" width="460" height="345">
+        <img src="static/RMNP2.jpg" alt="RMNP" width="60%" >
       </div>
     
       <div class="item">
-        <img src="static/RMNP3.jpg" alt="Flower" width="460" height="345">
+        <img src="static/RMNP3.jpg" alt="RMNP" width="60%" >
       </div>
 
       <div class="item">
-        <img src="static/RMNP4.jpg" alt="Flower" width="460" height="345">
+        <img src="static/RMNP4.jpg" alt="RMNP" width="60%" >
       </div>
       <div class="item">
-        <img src="static/RMNP5.jpg" alt="Flower" width="460" height="345">
+        <img src="static/RMNP5.jpg" alt="RMNP" width="60%" >
       </div>
     </div>
     <!-- Left and right controls -->
@@ -69,6 +68,8 @@
     </a>
   </div>
 </div>
+</div>
+
 
 
 
@@ -77,11 +78,11 @@
 		<!-- photo gallery -->
 
 
-
-
+<div class="col-sm-12">
 <div class="container">
   <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- class says that the this div will have a carousel  .slide-->
+  <div id="myCarousel" class="carousel" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -92,22 +93,22 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="static/GSDNP1.jpg" alt="Sand Boarding" width="460" height="345">
+        <img src="static/GSDNP1.jpg" alt="Sand Boarding" width="60%" height="345">
       </div>
 
       <div class="item">
-        <img src="static/GSDNP2.jpg" alt="Chania" width="460" height="345">
+        <img src="static/GSDNP2.jpg" alt="Sand Dunes Ridge" width="60%" height="345">
       </div>
     
       <div class="item">
-        <img src="static/GSDNP3.jpg" alt="Flower" width="460" height="345">
+        <img src="static/GSDNP3.jpg" alt="Sand Dunes With Mountains" width="60%" height="345">
       </div>
 
       <div class="item">
-        <img src="static/GSDNP4.jpg" alt="Flower" width="460" height="345">
+        <img src="static/GSDNP4.jpg" alt="Sand Dunes" width="60%" height="345">
       </div>
       <div class="item">
-        <img src="static/GSDNP5.jpg" alt="Flower" width="460" height="345">
+        <img src="static/GSDNP5.jpg" alt="Sand Dunes with Mountains" width="60%" height="345">
       </div>
     </div>
     <!-- Left and right controls -->
@@ -121,6 +122,9 @@
     </a>
   </div>
 </div>
+</div>
+</div>
+
 
 
 
