--- a/templates/activities.html
+++ b/templates/activities.html
@@ -19,9 +19,10 @@
 {% block content %}
 <div class="container text-center"> 
   <div class="row">
+	<div class="col-sm-12 col-md-6 col-lg-4">
 	<h3>Skiing</h3>
 	<p>In the summer these places have other events and activites for visiters to participate in, so no matter the time of the year one is never bored.</p>
-	<div class="col-sm-12 col-md-6 col-lg-4">
+	
 		<h4>Vail</h4>
 			<p>Vail has 31 lifts giving peiple access to 195 trails and over 5000 acres of a variety of terrain. People of all levels are welcome, from easy to extreme terrain everybody can find something to ski or snowbaord. There are also three terrain parks. They also offer tubing, ski biking, snowshoeing.</p>
 			<img src="static/BlueSky.jpg" alt="Blue Sky Basin">
@@ -39,12 +40,16 @@
 		<h3>Hiking</h3>
 			<h4>Chautauqua Park</h4>
 				<p>There are about eight different trails in Chautauqua. The longest one is the Mesa Trail, which is about 6.9 miles. The first-second Flatiron Trail is one of the more popular ones. Although it is only just over a mile long it also gains the most elevation, 960 ft.</p>
+				<img src="static/chataqua.jpg" alt="Chautauqua Park">
 			<h4>Mount Sanitas</h4>
 				<p>Is a 3.1 mile loop that is located in Boulder.</p>
 				<img src="static/MountSanitas.jpg" alt="Veiw From top of Mount Sanitas">
 			<h4>14ers</h4>
 				<p>There are 53 fourteeners in the State of Colorado, making it the State with the most fourteeners. Mt. Elbert, Mt. Massive, Mt. Harvard, Blanca Peak, and La Plata Peak are the five tallest ones in the state, respectively.</p>
+				<img src="static/MountElbert.JPG" alt="Mount Elbert">
 	</div>
+</div>
+</div>
 
 
 {% endblock %}
