--- a/static/style.css
+++ b/static/style.css
@@ -56,6 +56,7 @@ h3{
 	}
 	body img{
 		width: 50%;
+		padding: 5%;
 	}
 
 
@@ -68,11 +69,36 @@ h3{
 	body{
 		background-color: pink;
 	}
-	#flag{
-		float: right;
-		padding-left: 6%;
+	figure { 
+	  display: block; 
+	  position: relative; 
+	  overflow: hidden; 
 	}
 
+	figcaption { 
+	  position: absolute; 
+	  background: rgba(0,0,0,0.75); 
+	  color: white; 
+	  padding: 10px 20px; 
+	}
+	figcaption { 
+	  position: absolute; 
+	  background: rgba(0,0,0,0.75); 
+	  color: white; 
+	  padding: 10px 20px; 
+
+	  opacity: 0;
+	  bottom: 0; 
+	  left: -30%;
+	  -webkit-transition: all 0.6s ease;
+	  -moz-transition:    all 0.6s ease;
+	  -o-transition:      all 0.6s ease;
+	}
+
+	figure:hover figcaption {
+	  opacity: 1;
+	  left: 0;
+	}
 
 
 }
