--- a/templates/index.html
+++ b/templates/index.html
@@ -92,6 +92,8 @@
 <!-- 		<img src="static/CutthroatTrout.jpg" alt="Greenback Cutthroat Trout" class="center-block" class="img-responsive"> 
 		<p class="facts">Fish: Greenback Cutthroat Trout</p> -->
 </div>
+</div>
+<div class="row">
 <div class="col-sm-12 col-md-6 col-lg-4">
 	<figure>
 		<img src="static/ColoradoHairstreakButterfly.jpg" alt="Colorado Hairstreak Butterfly" class="center-block" class="img-responsive"> 
@@ -122,6 +124,8 @@
 <!-- 		<img src="static/blueSpruce.jpg" alt="Blue Spruce" class="center-block" class="img-responsive"> 
 		<p class="facts">Tree: Colorado blue Spruce</p> -->
 </div>
+</div>
+ <div class="row">
 <div class="col-sm-12 col-md-6 col-lg-4">
 	<figure>
 		<img src="static/bluegramagrass.jpg" alt="Blue Grama Grass" class="center-block" class="img-responsive"> 
