--- a/static/style.css
+++ b/static/style.css
@@ -55,8 +55,8 @@ h3{
 		color: #003333;
 	}
 	body img{
-		width: 50%;
-		padding: 5%;
+		width: 60%;
+		padding: 2%;
 	}
 
 
@@ -68,6 +68,19 @@ h3{
 @media all and (min-width: 800px){
 	body{
 		background-color: pink;
+	}
+
+
+
+}
+
+@media all and (min-width: 1100px){
+	body{
+		background-color: yellow;
+	}
+	#flag{
+		float: right;
+		padding-left: 2%;
 	}
 	figure { 
 	  display: block; 
@@ -100,15 +113,8 @@ h3{
 	  left: 0;
 	}
 
-
-}
-
-@media all and (min-width: 1100px){
-	body{
-		background-color: yellow;
-	}
-	#flag{
-		float: right;
-		padding-left: 2%;
+	body img{
+		width: 60%;
+		padding: 6%;
 	}
 }
