--- a/templates/parks.html
+++ b/templates/parks.html
@@ -76,54 +76,29 @@
 	<h3>Great Sand Dunes National Park and Preserve</h3>
 		<p>The Great Sand Dunes have been forming for a very long time and it is a result of unique wind patterns of the San Luis Vally. The dunes span 30 square miles and some estimate it to hold mroe than 5 billion cubic meters of sand. They are the tallest dunes in north america, with the tallest dune standing at 750 feet from the base to the top. Visiters can hike a variety of trails through the national park, as well as sandboard or sand sled down some of the dunes.</p>
 		<!-- photo gallery -->
-
-
-<div class="col-sm-12">
-<div class="container">
-  <br>
-  <!-- class says that the this div will have a carousel  .slide-->
-  <div id="myCarousel" class="carousel" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-      <li data-target="#myCarousel" data-slide-to="3"></li>
-    </ol>
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-        <img src="static/GSDNP1.jpg" alt="Sand Boarding" width="60%" height="345">
-      </div>
-
-      <div class="item">
-        <img src="static/GSDNP2.jpg" alt="Sand Dunes Ridge" width="60%" height="345">
-      </div>
-    
-      <div class="item">
-        <img src="static/GSDNP3.jpg" alt="Sand Dunes With Mountains" width="60%" height="345">
-      </div>
-
-      <div class="item">
-        <img src="static/GSDNP4.jpg" alt="Sand Dunes" width="60%" height="345">
-      </div>
-      <div class="item">
-        <img src="static/GSDNP5.jpg" alt="Sand Dunes with Mountains" width="60%" height="345">
-      </div>
-    </div>
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+ <div class="row">
+ <div class="col-sm-12 col-md-6">
+ <!-- 	<div class="container"> -->
+        <img src="static/GSDNP1.jpg" alt="Sand Boarding" width="60%">
+        </div>
+   <div class="col-sm-12 col-md-6">
+        <img src="static/GSDNP2.jpg" alt="Sand Dunes Ridge" width="60%" >
+        </div>
+        </div>
+        <div class="row">
+     <div class="col-sm-12 col-md-6">
+        <img src="static/GSDNP3.jpg" alt="Sand Dunes With Mountains" width="60%" >
+        </div>
+       <div class="col-sm-12 col-md-6">
+        <img src="static/GSDNP4.jpg" alt="Sand Dunes" width="60%" >
+        </div>
+<!--        <div class="col-sm-12 col-md-6">
+        <img src="static/GSDNP5.jpg" alt="Sand Dunes with Mountiants" width="60%" >
+</div> -->
 </div>
 </div>
 </div>
+<!-- </div> -->
 
 
 
