--- a/templates/base.html
+++ b/templates/base.html
@@ -20,17 +20,20 @@
 
 	
 </head>
+
+
+
 {% block body %}
 <!-- <body> -->
 {% endblock %}
 	<header>
 
+<h1 class="title">Colorado</h1>
 
 		<!-- This also changes from page to page. Createsthe title for each page -->
 		{% block head %}
 		I should never see this content.  It should be replaced.
 		{% endblock %}
-
 
   
 
