--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,6 @@
 
 
 {% block head %}
-	<h1>Colorado</h1>
 	<h2>Home</h2>
 {% endblock %}
 
@@ -81,7 +80,7 @@
 	</figure>
 <!-- 		<img src="static/RMbighornsheep.jpg" alt="Rocky Mountain Bighorn Sheep" class="center-block" class="img-responsive"> 
 		<p class="facts">Animal: Rocky Mountain Bighorn Sheep</p> -->
-</div>	
+</div>- 	
 <div class="col-sm-12 col-md-6 col-lg-4">
 	<figure>
 		<img src="static/CutthroatTrout.jpg" alt="Greenback Cutthroat Trout" class="center-block" class="img-responsive"> 
