--- a/templates/cities.html
+++ b/templates/cities.html
@@ -17,52 +17,77 @@
 
 {% block content %}
 <div class="container text-center"> 
-  <div class="row">
 	<h3>Boulder</h3>
+	<!-- Weather for Boulder, CO -->
+<a href="http://www.accuweather.com/en/us/boulder-co/80302/weather-forecast/327347" class="aw-widget-legal">
+</a><div id="awcc1459392860377" class="aw-widget-current"  data-locationkey="327347" data-unit="f" data-language="en-us" data-useip="false" data-uid="awcc1459392860377"></div><script type="text/javascript" src="http://oap.accuweather.com/launch.js"></script>
+
+	<div class="row">
 	<div class="col-sm-12 col-md-6">
-		<p>There are so many places to explore in Boulder. First there is Pearl Street Mall. Began as a supply town for gold miners in the mountains.It was established on February 10, 1859, as part of the hunting grounds for Arapahos. On August 6, 1977 Pearl Street became what it is today. No cars are allowed on a section allowing for walkers, and entertainers to find places to spend time.</p>
+		<p>There are so many places to explore in Boulder. First there is PEARL STREET MALL, which began as a supply town for gold miners in the mountains. It was established on February 10, 1859, as part of the hunting grounds for Arapahos. On August 6, 1977 Pearl Street became what it is today. No cars are allowed on a section allowing for walkers, and entertainers to find places to have fun.</p>
 		<img src="static/PearlStreet.jpg" alt="Pearl Street">
 		<img src="static/PearlPerformance.jpg" alt="Performacne on Pearl Street">
 	</div>
-		<p>The Colorado Shakespeare Festival is a theater company associated wiht the University of Colorado Boulder. They have been performing since 1958, however there there was a span of 19 years starting in 1901 that there were perofrmances . The shows happen outside in the Mary Rippon Outdoor Theatre and in the newly renovated indoor University Theatre.</p>
+	<div class="col-sm-12 col-md-6">
+		<p>THE COLORADO SHAKESPEARE FESTIVAL is a theater company associated wiht the University of Colorado Boulder. They have been performing since 1958, however there there was a span of 19 years starting in 1901 that there were perofrmances . The shows happen outside in the Mary Rippon Outdoor Theatre and in the newly renovated indoor University Theatre.</p>
+	</div>
 	<div class="col-sm-12 col-md-6 ">
-		<p>The Boulder County Farmers Market is a non profit organization running producer-only market. It was created by a group of local farmers in the mid-1980s. It has grown from a few tables of produce to more than 150 local venders, as well as to other locations and cities close by. </p>
+		<p>THE BOULDER COUNTY FARMERS MARKET is a non profit organization running producer-only market. It was created by a group of local farmers in the mid-1980s. It has grown from a few tables of produce to more than 150 local venders, as well as to other locations and cities close by. </p>
 		<img src="static/farmersmarket.jpg" alt="Boulder County Farmers Market">
 	</div>
+</div>
+<div class="row">
 	<div class="col-sm-12 col-md-6">
-		<p>If you like tea, have ever wondered how tea was made, or are just looking to waste some time Celestial Seasonings Tea Factory is the perfect place to do all of these things. You can take a 45 minute free tour of the factory and learn about the world of tea and how Celestial Seasonings products are blended, packaged, and shipped.</p>
+		<p>If you like tea, have ever wondered how tea was made, or are just looking to waste some time CELESTIAL SEASONINGS TEA FACTORY is the perfect place to do all of these things. You can take a 45 minute free tour of the factory and learn about the world of tea and how Celestial Seasonings products are blended, packaged, and shipped.</p>
 		<img src="static/celestial.jpg" alt="Celestial Seasonings Factory Tour">
 		<img src="static/somuchtea.jpg" alt="Tea in Boxes">
 	</div>
 	<div class="col-sm-12 col-md-6">
-		<p>The Leanin' Tree Museum of Western Art is rated Boulder's top museums and is one of the nation's largest private collections of western art. It is a free museum open every day of the week. You can even see how they make their very own greeting cards or take a walk through the outdoor garden and view life-size and monumental sculptures.. </p>
+		<p>THE LEANIN' TREE MUSEUM OF WESTERN ART is rated Boulder's top museums and is one of the nation's largest private collections of western art. It is a free museum open every day of the week. You can even see how they make their very own greeting cards or take a walk through the outdoor garden and view life-size and monumental sculptures.. </p>
 		<img src="static/leanin_tree_museum.jpg" alt="Leanin Tree Museum">
 		<img src="static/LTM-horse.jpg" alt="Horse in Leanin Tree Museum">
 	</div>
-
-
+</div>
+</div>
+<div class="container text-center"> 
 	<h3>Denver</h3>
-		<p>Red Rocks Ampitheatre is not just a place to hear some great music, but it is also offers many different activities. Many people use the theatre as a place to work out, do yoga, or even just to relax at. It is the only naturally occuring, acoustically perfect amiptheatre in the world. It opened on June 15th, 1941, can hold 9,525 people, and spans 640 acres.</p>
+	<div class="row">
+	<div class="col-sm-12 col-md-6">
+		<p>RED ROCKS AMPITHEATRE is not just a place to hear some great music, but it is also offers many different activities. Many people use the theatre as a place to work out, do yoga, or even just to relax at. It is the only naturally occuring, acoustically perfect amiptheatre in the world. It opened on June 15th, 1941, can hold 9,525 people, and spans 640 acres.</p>
 		<img src="static/AirRedRocks.jpg" alt="Red Rocks from Above">
 		<img src="static/RedRocksFromStage.jpg" alt="Red Rocks From the Stage">
 		<img src="static/RedRocksShow.jpg" alt="Red Rocks during a show">
-		<p>United States Mint was founded in 1792. The first circulating coins were delivered in March of 1793, they were copper cents. Soon after this, they also began to issue gold and silver coins. The Denver branch open in March of 1863.</p>
+	</div>
+	<div class="col-sm-12 col-md-6">
+		<p>THE UNITED STATES MINT was founded in 1792. The first circulating coins were delivered in March of 1793, they were copper cents. Soon after this, they also began to issue gold and silver coins. The Denver branch open in March of 1863.</p>
 		<img src="static/coins.jpg" alt="Coins being made">
 		<img src="static/Coins2.jpg" alt="Another step in making coins">
 		<img src="static/coinproduction.jpg" alt="Coin Production">
 		<img src="static/USMint.jpg" alt="US Mint Sign">
+	</div>
+</div>
+</div>
+
 
 
 {% endblock %}
 
 
 {% block foot %}
-http://travel.usnews.com/Boulder_CO/Things_To_Do/
-https://www.tripadvisor.com/Attractions-g33324-Activities-Boulder_Colorado.html
-http://www.usmint.gov/mint_tours/?action=startreservation
-http://www.boulderdowntown.com/visit/history-of-pearl-street
-http://www.celestialseasonings.com/visit-us/tea-tour
-http://www.coloradoshakes.org/about/history
-www.leanintreemuseum.c…
-http://redrocksonline.com
+
+<a href="http://www.boulderdowntown.com/visit/history-of-pearl-street">Pearl Street</a>
+<a href="http://www.celestialseasonings.com/visit-us/tea-tour">Celestial Seasonings</a>
+<a href="http://www.coloradoshakes.org/about/history">Shakespeare Festival</a>
+<a href="http://www.leanintreemuseum.com/">Leanin' Tree Museum</a>
+<a href="http://www.usmint.gov/mint_tours/?action=startreservation">US Mint</a>
+<a href="http://redrocksonline.com">Red Rocks Ampitheatre</a>
+<a href="https://www.tripadvisor.com/Attractions-g33324-Activities-Boulder_Colorado.html
+">Boulder Atractions</a>
+
+
+
+
+
+
+
 {% endblock %}
