--- a/templates/parks.html
+++ b/templates/parks.html
@@ -123,9 +123,8 @@
 
 
 {% block foot %}
-http://www.nps.gov/romo/index.htm
-http://www.visitestespark.com
-http://estestram.com/index.html
-http://www.colorado.com/articles/national-park-profile-great-sand-dunes-national-park
+<a href="http://www.colorado.com/articles/national-park-profile-great-sand-dunes-national-park">Great Sand Dunes National Park</a>
+<a href="http://www.nps.gov/romo/index.htm">Rocky Mountain National Park</a>
+<a href="http://www.visitestespark.com/">Estes Park</a>
 {% endblock %}
 
