--- a/templates/index.html
+++ b/templates/index.html
@@ -25,33 +25,28 @@
 		<p>Colorado is nicknamed The centennial State becasue 100 years after the signing of our nations declaration of independence we became a state.</p>
 	<div class="col-sm-12 col-md-6 col-lg-4">
 	<figure>
-	<img src="static/Denver.gif" alt="Capital" class="center-block" class="img-responsive" >
+	<img src="static/Denver.gif" alt="Capital" class="grow center-block img-responsive">
 		<figcaption>
 			The capital of Colorado is Denver, located in the upper right hand corner of the map.
 		</figcaption>
 	</figure>
-		<!-- <img src="static/Denver.gif" alt="Capital" class="center-block" class="img-responsive" >
-		<p>The capital of Colorado is Denver, located in the upper right hand corner of the map.</p> -->
+	
 	</div>
 	<div class="col-sm-12 col-md-6 col-lg-4">
 		<figure>
-		<img src="static/MountElbert.JPG" alt="Mount Elbert" class="center-block" class="img-responsive">
+		<img src="static/MountElbert.JPG" alt="Mount Elbert" class="grow img-responsive center-block">
 		<figcaption>
 			Mount Elbert is the highest point in Colorado, coming in at 14,433 feet.
 		</figcaption>
 	</figure>
-<!-- 		<img src="static/MountElbert.JPG" alt="Mount Elbert" class="center-block" class="img-responsive">
-		<p>Mount Elbert is the highest point in Colorado, coming in at 14,433 feet.</p> -->
 	</div>	
 	<div class="col-sm-12 col-lg-4">
 	<figure>
-		<img src="static/arkansasriver.jpg" alt="Arkansas River"  class="center-block" class="img-responsive">
+		<img src="static/arkansasriver.jpg" alt="Arkansas River" class="growing img-responsive center-block">
 		<figcaption>
 			The lowest point is the Arkansas River at 3,315 feet above sea level.
 		</figcaption>
 	</figure>
-<!-- 		<img src="static/arkansasriver.jpg" alt="Arkansas River"  class="center-block" class="img-responsive">
-		<p>The lowest point is the Arkansas River at 3,315 feet above sea level.</p> -->
     </div>
   </div>
 </div>
@@ -61,99 +56,92 @@
 	<h3>State...</h3>
 		<p class="facts">Motto: Nil sine and Numine (nothing without Providence)</p>
 
-<div class="col-sm-12 col-md-6 col-lg-4">
+<div class="col-sm-12 col-md-4">
 	<figure>
-		<img src="static/RMColumbine.jpg" alt="Rocky Mountain Columbine" class="center-block" class="img-responsive">
+		<img src="static/RMColumbine.jpg" alt="Rocky Mountain Columbine" class="center-block grow img-responsive">
 		<figcaption>
 			<p class="facts">Flower: Rocky Mountain Columbine</p>
 		</figcaption>
 	</figure>
-<!-- 		<img src="static/RMColumbine.jpg" alt="Rocky Mountain Columbine" class="center-block" class="img-responsive">
-		<p class="facts">Flower: Rocky Mountain Columbine</p> -->
 </div>
-<div class="col-sm-12 col-md-6 col-lg-4">
+<div class="col-sm-12 col-md-4">
 	<figure>
-		<img src="static/RMbighornsheep.jpg" alt="Rocky Mountain Bighorn Sheep" class="center-block" class="img-responsive"> 
+		<img src="static/RMbighornsheep.jpg" alt="Rocky Mountain Bighorn Sheep" class="grow img-responsive center-block"> 
 		<figcaption>
 			<p class="facts">Animal: Rocky Mountain Bighorn Sheep</p>
 		</figcaption>
 	</figure>
-<!-- 		<img src="static/RMbighornsheep.jpg" alt="Rocky Mountain Bighorn Sheep" class="center-block" class="img-responsive"> 
-		<p class="facts">Animal: Rocky Mountain Bighorn Sheep</p> -->
-</div>- 	
-<div class="col-sm-12 col-md-6 col-lg-4">
+</div>
+<div class="col-sm-12 col-md-4">
 	<figure>
-		<img src="static/CutthroatTrout.jpg" alt="Greenback Cutthroat Trout" class="center-block" class="img-responsive"> 
+		<img src="static/CutthroatTrout.jpg" alt="Greenback Cutthroat Trout" class=" grow img-responsive center-block"> 
 		<figcaption>
 			<p class="facts">Fish: Greenback Cutthroat Trout</p>
 		</figcaption>
 	</figure>
-<!-- 		<img src="static/CutthroatTrout.jpg" alt="Greenback Cutthroat Trout" class="center-block" class="img-responsive"> 
-		<p class="facts">Fish: Greenback Cutthroat Trout</p> -->
 </div>
 </div>
 <div class="row">
-<div class="col-sm-12 col-md-6 col-lg-4">
+<div class="col-sm-12 col-md-4">
 	<figure>
-		<img src="static/ColoradoHairstreakButterfly.jpg" alt="Colorado Hairstreak Butterfly" class="center-block" class="img-responsive"> 
+		<img src="static/ColoradoHairstreakButterfly.jpg" alt="Colorado Hairstreak Butterfly" class="grow img-responsive center-block"> 
 		<figcaption>
 			<p class="facts">Insect: Colorado Hairstreak Butterfly</p>
 		</figcaption>
 	</figure>
-		<!-- <img src="static/ColoradoHairstreakButterfly.jpg" alt="Colorado Hairstreak Butterfly" class="center-block" class="img-responsive"> 
-		<p class="facts">Insect: Colorado Hairstreak Butterfly</p> -->
 </div>
-<div class="col-sm-12 col-md-6 col-lg-4">	
+<div class="col-sm-12 col-md-4">	
 	<figure>
-		<img src="static/LarkBunting.jpg" alt="Lark Bunting" class="center-block" class="img-responsive"> 
+		<img src="static/LarkBunting.jpg" alt="Lark Bunting" class="grow img-responsive center-block"> 
 		<figcaption>
 			<p class="facts">Bird: Lark Bunting</p>
 		</figcaption>
 	</figure>
-<!-- 		<img src="static/LarkBunting.jpg" alt="Lark Bunting" class="center-block" class="img-responsive"> 
-		<p class="facts">Bird: Lark Bunting</p> -->
 </div>	
-<div class="col-sm-12 col-md-6 col-lg-4">
+<div class="col-sm-12 col-md-4">
 	<figure>
-		<img src="static/blueSpruce.jpg" alt="Blue Spruce" class="center-block" class="img-responsive"> 
+		<img src="static/blueSpruce.jpg" alt="Blue Spruce" class="grow img-responsive center-block"> 
 		<figcaption>
 			<p class="facts">Tree: Colorado blue Spruce</p>
 		</figcaption>
 	</figure>
-<!-- 		<img src="static/blueSpruce.jpg" alt="Blue Spruce" class="center-block" class="img-responsive"> 
-		<p class="facts">Tree: Colorado blue Spruce</p> -->
 </div>
 </div>
  <div class="row">
-<div class="col-sm-12 col-md-6 col-lg-4">
+<div class="col-sm-12 col-md-4">
 	<figure>
-		<img src="static/bluegramagrass.jpg" alt="Blue Grama Grass" class="center-block" class="img-responsive"> 
+		<img src="static/bluegramagrass.jpg" alt="Blue Grama Grass" class="grow img-responsive center-block"> 
 		<figcaption>
 			<p class="facts">Grass: Blue Grama Grass</p>
 		</figcaption>
 	</figure>
-<!-- 		<img src="static/bluegramagrass.jpg" alt=" Blue Grama Grass" class="center-block" class="img-responsive"> 
-		<p class="facts">Grass: Blue Grama Grass</p> -->
 </div>
-<div class="col-sm-12 col-md-6 col-lg-4">
+<div class="col-sm-12 col-md-4">
 	<figure>
-		<img src="static/Aquamarine.jpg" alt="Aquamarine" class="center-block" class="img-responsive">
+		<img src="static/Aquamarine.jpg" alt="Aquamarine" class="center-block grow img-responsive">
 		<figcaption>
 			<p class="facts">Gem: Aquamarine</p>
 		</figcaption>
 	</figure>
-<!-- 		<img src="static/Aquamarine.jpg" alt="Aquamarine" class="center-block" class="img-responsive">
-		<p class="facts">Gem: Aquamarine</p> -->
 </div>
-	<iframe width=60% src="https://www.youtube.com/embed/LLWD2WIvRQk" frameborder="0" allowfullscreen></iframe>  
-	<p class="facts">Song: Rocky Mountain High</p>
- 
-  </div>
+<div class="col-sm-12 col-md-4">
+	<figure>
+		<img src="static/Stegosaurus.jpg" alt="Stegosaurus" class= "grow img-responsive center-block">
+		<figcaption>
+			<p class="facts">Fossil: Stegosaurus</p>
+		</figcaption>
+	</figure>
 </div>
 
-	<!-- State facts w/ pics 
-		dance: square dance
--->
+
+</div>
+
+	<iframe src="https://www.youtube.com/embed/LLWD2WIvRQk" allowfullscreen></iframe>  
+	<p class="facts">Song: Rocky Mountain High</p>
+ 
+  
+</div>
+
 
 {% endblock %}
 	
