--- a/templates/parks.html
+++ b/templates/parks.html
@@ -38,22 +38,22 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="static/RMNP1.jpg" alt="RMNP" width="60%">
+        <img src="static/RMNP1.jpg" alt="RMNP" >
       </div>
 
       <div class="item">
-        <img src="static/RMNP2.jpg" alt="RMNP" width="60%" >
+        <img src="static/RMNP2.jpg" alt="RMNP" >
       </div>
     
       <div class="item">
-        <img src="static/RMNP3.jpg" alt="RMNP" width="60%" >
+        <img src="static/RMNP3.jpg" alt="RMNP"  >
       </div>
 
       <div class="item">
-        <img src="static/RMNP4.jpg" alt="RMNP" width="60%" >
+        <img src="static/RMNP4.jpg" alt="RMNP" >
       </div>
       <div class="item">
-        <img src="static/RMNP5.jpg" alt="RMNP" width="60%" >
+        <img src="static/RMNP5.jpg" alt="RMNP"  >
       </div>
     </div>
     <!-- Left and right controls -->
@@ -78,44 +78,22 @@
  <div class="row">
  <div class="col-sm-12 col-md-6">
  <!-- 	<div class="container"> -->
-        <img src="static/GSDNP1.jpg" alt="Sand Boarding" width="60%">
+        <img src="static/GSDNP1.jpg" alt="Sand Boarding" >
         </div>
    <div class="col-sm-12 col-md-6">
-        <img src="static/GSDNP2.jpg" alt="Sand Dunes Ridge" width="60%" >
+        <img src="static/GSDNP2.jpg" alt="Sand Dunes Ridge" >
         </div>
         </div>
         <div class="row">
      <div class="col-sm-12 col-md-6">
-        <img src="static/GSDNP3.jpg" alt="Sand Dunes With Mountains" width="60%" >
+        <img src="static/GSDNP3.jpg" alt="Sand Dunes With Mountains"  >
         </div>
        <div class="col-sm-12 col-md-6">
-        <img src="static/GSDNP4.jpg" alt="Sand Dunes" width="60%" >
+        <img src="static/GSDNP4.jpg" alt="Sand Dunes"  >
         </div>
-<!--        <div class="col-sm-12 col-md-6">
-        <img src="static/GSDNP5.jpg" alt="Sand Dunes with Mountiants" width="60%" >
-</div> -->
 </div>
 </div>
 </div>
-<!-- </div> -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- 		<p>Hiking and backpacking, snadboarding and sand sledding, Splashing in Medano Creek, Zapata Falls, </p> -->
-<!-- 	<h3>Mesa Verde National Park</h3>
-		<p>Mesa Verde Visitor and research center, chapin mesa archeological Museum, cliff dweling,  Spruce Tree House -or- drive the Mesa Top Loop Road, Drive the Cliff Palace/Balcony House Loop Road, </p> -->
-
 
 
 {% endblock %}
