--- a/templates/activities.html
+++ b/templates/activities.html
@@ -23,7 +23,7 @@
 	<div class="col-sm-12 col-md-6 col-lg-4">
 		<h4>Vail</h4>
 			<p>Vail has 31 lifts giving peiple access to 195 trails and over 5000 acres of a variety of terrain. People of all levels are welcome, from easy to extreme terrain everybody can find something to ski or snowbaord. There are also three terrain parks. They also offer tubing, ski biking, snowshoeing.</p>
-<!-- 			<img src="static/BlueSky.jpg" alt="Blue Sky Basin"> -->
+			<!-- twitter feed for vail -->
 			<a class="twitter-timeline" href="https://twitter.com/vailmtn" data-widget-id="715281133148246016">Tweets by @vailmtn</a>
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 	</div>
