--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
     // return time as a string
     return "The local time for "+ city +" is "+ nd.toLocaleString();
 }
-document.write(calcTime('Colorado', '+2')).fontcolor('red');
+document.write(calcTime('Colorado', '+2'));
 </script>
 	
 </head>
