--- a/templates/cities.html
+++ b/templates/cities.html
@@ -51,6 +51,11 @@
 </div>
 <div class="container text-center"> 
 	<h3>Denver</h3>
+
+<!-- Weather for Denver, CO -->
+<a href="http://www.accuweather.com/en/us/denver-co/80203/weather-forecast/347810" class="aw-widget-legal">
+</a><div id="awcc1459438595767" class="aw-widget-current"  data-locationkey="347810" data-unit="f" data-language="en-us" data-useip="false" data-uid="awcc1459438595767"></div><script type="text/javascript" src="http://oap.accuweather.com/launch.js"></script>
+
 	<div class="row">
 	<div class="col-sm-12 col-md-6">
 		<p>RED ROCKS AMPITHEATRE is not just a place to hear some great music, but it is also offers many different activities. Many people use the theatre as a place to work out, do yoga, or even just to relax at. It is the only naturally occuring, acoustically perfect amiptheatre in the world. It opened on June 15th, 1941, can hold 9,525 people, and spans 640 acres.</p>
@@ -68,26 +73,16 @@
 </div>
 </div>
 
-
-
 {% endblock %}
 
 
 {% block foot %}
-
-<a href="http://www.boulderdowntown.com/visit/history-of-pearl-street">Pearl Street</a>
-<a href="http://www.celestialseasonings.com/visit-us/tea-tour">Celestial Seasonings</a>
-<a href="http://www.coloradoshakes.org/about/history">Shakespeare Festival</a>
-<a href="http://www.leanintreemuseum.com/">Leanin' Tree Museum</a>
-<a href="http://www.usmint.gov/mint_tours/?action=startreservation">US Mint</a>
-<a href="http://redrocksonline.com">Red Rocks Ampitheatre</a>
-<a href="https://www.tripadvisor.com/Attractions-g33324-Activities-Boulder_Colorado.html
-">Boulder Atractions</a>
-
-
-
-
-
-
-
+	<a href="http://www.boulderdowntown.com/visit/history-of-pearl-street">Pearl Street</a>
+	<a href="http://www.celestialseasonings.com/visit-us/tea-tour">Celestial Seasonings</a>
+	<a href="http://www.coloradoshakes.org/about/history">Shakespeare Festival</a>
+	<a href="http://www.leanintreemuseum.com/">Leanin' Tree Museum</a>
+	<a href="http://www.usmint.gov/mint_tours/?action=startreservation">US Mint</a>
+	<a href="http://redrocksonline.com">Red Rocks Ampitheatre</a>
+	<a href="https://www.tripadvisor.com/Attractions-g33324-Activities-Boulder_Colorado.html
+	">Boulder Atractions</a>
 {% endblock %}
