--- a/static/style.css
+++ b/static/style.css
@@ -1,36 +1,36 @@
-body {
-	margin: 2%;
-	font-family: chalkduster;
-	font-size: 20px;
-}
-header{
-	background-image: url("Flag.png");
-	background-size: contain;
-	color: blue;
-}
-header .title{
-	font-weight: bold;
-	font-size: 55px;
-	color: white;
-}
-h2{
-	font-weight: bold;
-}
-h3{
-	font-weight: bold;
-	font-size: 30px;
-}
-h4{
-	font-weight: bold;
-	font-size: 25px;
-}
+	body {
+		margin: 2%;
+		font-family: chalkduster;
+		font-size: 20px;
+	}
+	header{
+		background-image: url("Flag.png");
+		background-size: contain;
+		color: blue;
+	}
+	header .title{
+		font-weight: bold;
+		font-size: 55px;
+		color: white;
+	}
+	h2{
+		font-weight: bold;
+	}
+	h3{
+		font-weight: bold;
+		font-size: 30px;
+	}
+	h4{
+		font-weight: bold;
+		font-size: 25px;
+	}
 
-#navigation1 .navigation-1, #navigation2 .navigation-2, #navigation3 .navigation-3, #navigation4 .navigation-4{
-	background-color: pink;
-	color: #FFFF00;
-	font-family: "marker felt";
-	font-weight: bold;
-	text-transform: uppercase;
+	#navigation1 .navigation-1, #navigation2 .navigation-2, #navigation3 .navigation-3, #navigation4 .navigation-4{
+		background-color: pink;
+		color: #FFFF00;
+		font-family: "marker felt";
+		font-weight: bold;
+		text-transform: uppercase;
 	}
 	.facts{
 		border: black 3px dash;
@@ -59,48 +59,35 @@ h4{
 
 	.carousel-inner > .item > img,
   	.carousel-inner > .item > a > img {
-      width: 70%;
-      margin: auto;
-  }
-  iframe{
-  	border: 0px;
-  }
+    	width: 70%;
+    	margin: auto;
+	 }
+	iframe{
+		border: 0px;
+	}
 
 
 
 @media only screen and (min-width: 400px){
-/*	#flag{
-		width: 20%;
-		float: right;
-		padding-left: 2%;
-	}*/
-
 	body{
 		background-color: 	#7fc9b1;
 		color: #082020;
 	}
 	body img{
-		width: 60%;
+		width: 75%;
 		padding: 2%;
 	}
-
-
-
-	
-
 }
 
 @media all and (min-width: 800px){
 	body{
 		background-color: #7fc9b1;
 	}
-footer a{
+	footer a{
 		display: inline-block;
 		margin: 0 auto;
 		width: 40%;
 	}
-
-
 }
 
 @media all and (min-width: 1100px){
@@ -112,6 +99,7 @@ footer a{
 		background-repeat: no-repeat;
 
 	}
+	/*magnifying pictures on home page*/
 	.grow {
 	 	transition: all .2s ease-in-out; 
 	 	cursor: pointer; 
@@ -119,7 +107,7 @@ footer a{
 	 	cursor: zoom-in;
 	}
 	.grow:hover { 
-		transform: scale(1.9); 
+		transform: scale(1.3); 
 		overflow: auto;
 		width: 100%;
 	}
@@ -137,12 +125,13 @@ footer a{
 		display: inline-block;
 		width: 30%;
 	}
+	
+
 	figure { 
 	  display: block; 
 	  position: relative; 
 	  overflow: hidden; 
 	}
-
 	figcaption { 
 	  position: absolute; 
 	  background: rgba(0,0,0,0.75); 
@@ -173,3 +162,6 @@ footer a{
 		padding: 6%;
 	}
 }
+
+
+
