--- a/templates/parks.html
+++ b/templates/parks.html
@@ -27,17 +27,19 @@
 <div class="col-sm-12">
 <div class="container">
   <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
+  <!-- id=fucntion of controls; class carousel=div contains a carousel; .slide=makes the items slide when showing new item -->
+  <div id="myCarousel" class="carousel slide" >
+    <!-- Indicators (dots at bottom); data-target points to the id of the carousel; data-slide-to specifies which slide to go to when clicking a dot.-->
     <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
       <li data-target="#myCarousel" data-slide-to="3"></li>
+      <li data-target="#myCarousel" data-slide-to="4"></li>
+      <li data-target="#myCarousel" data-slide-to="5"></li>
     </ol>
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
-      <div class="item active">
+      <div class="item active"> <!-- will not be visible without -->
         <img src="static/RMNP1.jpg" alt="RMNP" >
       </div>
 
@@ -56,7 +58,7 @@
         <img src="static/RMNP5.jpg" alt="RMNP"  >
       </div>
     </div>
-    <!-- Left and right controls -->
+    <!-- Left and right controls: data-slide has keywors "prev" or "next", altering the position of each image relative to the ones next to it. -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
@@ -101,8 +103,8 @@
 
 
 {% block foot %}
-<a href="http://www.colorado.com/articles/national-park-profile-great-sand-dunes-national-park">Great Sand Dunes National Park</a>
-<a href="http://www.nps.gov/romo/index.htm">Rocky Mountain National Park</a>
-<a href="http://www.visitestespark.com/">Estes Park</a>
+	<a href="http://www.colorado.com/articles/national-park-profile-great-sand-dunes-national-park">Great Sand Dunes National Park</a>
+	<a href="http://www.nps.gov/romo/index.htm">Rocky Mountain National Park</a>
+	<a href="http://www.visitestespark.com/">Estes Park</a>
 {% endblock %}
 
