Fixed the footer
footer is not centered on all pages and sizes

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,6 @@
 	function calcTime(city, offset) {
     // create Date object for current location
     var d = new Date();
-
     // convert to msec
     // subtract local time zone offset
     // get UTC time in msec
@@ -40,7 +39,6 @@ document.write(calcTime('Colorado', '+2'));
 </head>
 
 
-
 {% block body %}
 <!-- <body> -->
 {% endblock %}
@@ -48,21 +46,16 @@ document.write(calcTime('Colorado', '+2'));
 
 <h1 class="title">Colorado</h1>
 
-	
-
-
-
 		<!-- This also changes from page to page. Createsthe title for each page -->
 		{% block head %}
 		I should never see this content.  It should be replaced.
 		{% endblock %}
-
   
 
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+      <button type="button" value="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
@@ -79,20 +72,7 @@ document.write(calcTime('Colorado', '+2'));
   </div>
 </nav>
 
-
-
-
-<!-- 
-		<ul class="nav nav-pills nav-justified">
-    		<li class="active"><a href = "index.html">Home</a></li>
-   			<li><a href = "activities.html">Activities</a></li>
-   			<li><a href = "cities.html">Cities</a></li>
-   			<li><a href = "parks.html">National Parks</a></li>
- 		</ul>
- -->
-
 	</header>
-
 
 	<!-- Also changes from page to page. Creates -->
 	{% block content %}
@@ -100,13 +80,9 @@ document.write(calcTime('Colorado', '+2'));
 	{% endblock %}
 
 
-
-
-
 	<footer>
 
-
-		<a href = "https://www.colorado.gov">Colorado</a> 
+		<a href= "https://www.colorado.gov">Colorado</a> 
 		<a href="http://www.colorado.com">Tourism</a> 
 		<a href="http://www.denverpost.com">News</a>
 
@@ -114,7 +90,7 @@ document.write(calcTime('Colorado', '+2'));
 		{% endblock %}
 
 		<!-- Jumps to top of the page -->
-	<a href="#Top" id="top">Go to the top of the page</a>
+	<a href="#Top" value="top" id="top">To top of page</a>
 
 		<p>Copyright &copy; Meagan Londa from the University of Michigan</p>
 	</footer>
