--- a/templates/base.html
+++ b/templates/base.html
@@ -4,9 +4,8 @@
 	<meta charset="UTF-8">
 
 {% block header %}
-	Put title here
+
 {% endblock %}
-<title>Colorado</title>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -90,7 +89,7 @@ document.write(calcTime('Colorado', '+2'));
 		{% endblock %}
 
 		<!-- Jumps to top of the page -->
-	<a href="#Top" value="top" id="top">To top of page</a>
+	<a href="#Top" id="top">To top of page</a>
 
 		<p>Copyright &copy; Meagan Londa from the University of Michigan</p>
 	</footer>
