--- a/templates/parks.html
+++ b/templates/parks.html
@@ -55,7 +55,7 @@
         <img src="static/RMNP4.jpg" alt="RMNP" >
       </div>
       <div class="item">
-        <img src="static/RMNP5.jpg" alt="RMNP"  >
+        <img src="static/RMNP5.JPG" alt="RMNP"  >
       </div>
     </div>
     <!-- Left and right controls: data-slide has keywors "prev" or "next", altering the position of each image relative to the ones next to it. -->
