--- a/static/style.css
+++ b/static/style.css
@@ -71,10 +71,11 @@
 
 
 
-@media only screen and (min-width: 400px){
+@media only screen and (max-width: 800px){
 	body{
-		background-color: 	#7fc9b1;
-		color: #082020;
+		background-color: #7fc9b1;
+		color: #104545;
+		/*#082020*/
 	}
 	body img{
 		width: 75%;
@@ -96,16 +97,19 @@
 		margin: 0 auto;
 		width: 40%;
 	}
+	body img{
+		width: 75%;
+		padding: 2%;
+	}
 }
 
 @media all and (min-width: 1100px){
 	body{
 		background-color: #46895b;
-		color: #1f1f87;
+		color: black;
 		background-image: url("CO.jpg");
 		background-size: 100% 100%;
 		background-repeat: no-repeat;
-
 	}
 	/*magnifying pictures on home page*/
 	.grow {
