--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,7 @@
 
 <link rel="stylesheet" href="static/style.css">
 
-<script>
-	function calcTime(city, offset) {
+<!-- 	function calcTime(city, offset) {
     // create Date object for current location
     var d = new Date();
     // convert to msec
@@ -33,8 +32,9 @@
     return "The local time for "+ city +" is "+ nd.toLocaleString();
 }
 document.write(calcTime('Colorado', '+2'));
-</script>
+ -->
 	
+<iframe src="http://free.timeanddate.com/clock/i54xqcg9/n75/fn6/fs18/fcffdf00/tc000/ftb/bas2/bat1/bacfff/pa8/tt0/tw1/th2/ta1" frameborder="0" width="415" height="42"></iframe>
 </head>
 
 
