--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,8 @@
 <div class="container text-center"> 
   <div class="row">
 		<h3>Facts</h3>
-		<p>Colorado enterend the Union on August 1, 1876</p>
-		<p>Colorado is nicknamed The centennial State becasue 100 years after the signing of our nations declaration of independence we became a state.</p>
+		<p>Colorado entered the Union on August 1, 1876</p>
+		<p>Colorado is nicknamed The Centennial State because 100 years after the signing of our nations declaration of independence we became a state.</p>
 	<div class="col-sm-12 col-md-6 col-lg-4">
 	<figure>
 	<img src="static/Denver.gif" alt="Capital" class="grow center-block img-responsive">
