--- a/static/style.css
+++ b/static/style.css
@@ -49,6 +49,7 @@
 	footer{
 		display: block;
 		text-align: center;
+
 /*		width: 100%;*/
 	}
 	#top{
@@ -58,6 +59,9 @@
 		background-color: transparent;
 		display:block;
 		text-align:center;
+		margin-top: 30px;
+		margin-bottom: 30px;
+
 	}	
 
 	.carousel-inner > .item > img,
