--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
   <div class="row">
 		<h3>Facts</h3>
 		<p>Colorado entered the Union on August 1, 1876</p>
-		<p>Colorado is nicknamed The Centennial State because 100 years after the signing of our nations declaration of independence we became a state.</p>
+		<p>Colorado is nicknamed The Centennial State because 100 years after the signing of our nations Declaration of Independence we became a state.</p>
 	<div class="col-sm-12 col-md-6 col-lg-4">
 	<figure>
 	<img src="static/Denver.gif" alt="Capital" class="grow center-block img-responsive">
@@ -42,7 +42,7 @@
 	</div>	
 	<div class="col-sm-12 col-lg-4">
 	<figure>
-		<img src="static/arkansasriver.jpg" alt="Arkansas River" class="growing img-responsive center-block">
+		<img src="static/arkansasriver.jpg" alt="Arkansas River" class="grow img-responsive center-block">
 		<figcaption>
 			The lowest point is the Arkansas River at 3,315 feet above sea level.
 		</figcaption>
