--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@ document.write(calcTime('Colorado', '+2'));
       </button>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav nav-pills nav-justified">  
+      <ul class="nav nav-pills nav-justified">
         	<li class = "navigation-1 color-me"><a href = "index.html">Home</a></li>
     		<li class = "navigation-2 color-me"><a href = "activities.html">Activities</a></li>
     		<li class = "navigation-3 color-me"><a href = "cities.html">Cities</a></li>
@@ -107,7 +107,7 @@ document.write(calcTime('Colorado', '+2'));
 		{% endblock %}
 
 		<!-- Jumps to top of the page -->
-	<a href="#Top" id="top">To top of page</a>
+	<a href="#Top" id="top">Back to top</a>
 
 		<p>Copyright &copy; Meagan Londa from the University of Michigan</p>
 	</footer>
