--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
+	<meta charset="UTF-8"/>
 
 {% block header %}
 
@@ -14,26 +14,10 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
 
-<link rel="stylesheet" href="static/style.css">
+<link rel="stylesheet" href="static/style.css"/>
 
-<!-- 	function calcTime(city, offset) {
-    // create Date object for current location
-    var d = new Date();
-    // convert to msec
-    // subtract local time zone offset
-    // get UTC time in msec
-    var utc = d.getTime() - (d.getTimezoneOffset() * 60000);
 
-    // create new Date object for different city
-    // using supplied offset
-    var nd = new Date(utc + (3600000*offset));
-
-    // return time as a string
-    return "The local time for "+ city +" is "+ nd.toLocaleString();
-}
-document.write(calcTime('Colorado', '+2'));
- -->
-<title>Colorado</title>
+<!-- <title>Colorado</title> -->
 
 
 
